--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FitShirt - Tu Plataforma de Camisetas Deportivas Personalizadas</title>
+  <link rel="icon" href="/logo.png">
+  
+  <!-- Meta Tags for SEO -->
+  <meta name="description" content="FitShirt es la solución perfecta para diseñar y comprar camisetas deportivas personalizadas. Ofrecemos una amplia variedad de diseños y herramientas intuitivas para una experiencia de compra única y accesible.">
+  <meta name="keywords" content="camisetas personalizadas, ropa deportiva, diseño de camisetas, FitShirt, moda deportiva, personalización de prendas, compra de camisetas, plataforma de diseño">
+  <meta name="author" content="Pollos Hermanos UPC">
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
